# AnasOS

./: & make  .gitignore  .gitmodules  Cargo.toml  Makefile  Makefile-old  README.md  bochsrc.txt  bochsrc.txt.back  boot.asm  doom.asm  install_dependencies.sh
.cargo/: config.toml
.github/: pull_request_template.md
anasos-kernel/: Cargo.toml  build.rs  linker.ld  rust-toolchain
anasos-kernel/.cargo/: config.toml
anasos-kernel/bootloader/: Makefile  boot-64.asm  boot.asm  bootloader-old.asm  e820.asm  header.asm
anasos-kernel/src/: allocator.rs  boot_info.rs  bootinfo.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  memory_map.rs  paging.rs  pci_controller.rs  serial.rs  utils.rs  vga.rs
anasos-kernel/src/allocator/: fixed_size_block.rs  mod.rs
anasos-kernel/src/apps/: mod.rs
anasos-kernel/src/apps/presentation/: mod.rs
anasos-kernel/src/apps/presentation/data/: mod.rs
anasos-kernel/src/apps/terminal/: mod.rs
anasos-kernel/src/boot_info/: mod.rs
anasos-kernel/src/bootinfo/: frame_allocator.rs  level4_entries.rs  memory_map.rs  page_table.rs  traits.rs
anasos-kernel/src/framebuffer/: mapping.rs  mod.rs
anasos-kernel/src/framebuffer_off/: mod.rs
anasos-kernel/src/framebuffer_theseus/: color.rs  mod.rs  pixel.rs  shapes.rs
anasos-kernel/src/memory/: memory_map.rs  mod.rs
anasos-kernel/src/shell/: echo.rs  mod.rs  osfetch.rs  presentation.rs
anasos-kernel/src/task/: draw.rs  executor.rs  keyboard.rs  mod.rs  simple_executor.rs
bootloader/: boot.asm
docs/: Home.md  README.md  _Sidebar.md
exercises/: calls_and_stack_working.asm  get_input_and_print.asm  printAlphabet  printf-scanf.asm  printing_1byte_number.asm
presentation/: slide-0.ppm  slide-1.ppm  slide-10.ppm  slide-11.ppm  slide-12.ppm  (+24 more)
(+31 files in other folders)
