[package]
name = "anasos-kernel"
version = "1.1.0"
authors = ["Emil Momchev <emil@momchev.dev>"]
edition = "2021"

build = "build.rs"

[dependencies]
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.12"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
bootloader-x86_64-bios-common = "0.11.8"
uart_16550 = "0.2.0"
multiboot2 = "0.23.1"
zerocopy = "0.5.0"
embedded-graphics = "0.8.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[build-dependencies]
llvm-tools = "0.1"
